[project]
name = "enterprise-wechat-rag"
version = "0.1.0"
description = "Enterprise RAG MVP for WeChat customer groups and SaaS help center knowledge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.0",
    "pymysql>=1.1.1",
    "uvicorn[standard]>=0.30.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
analysis = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
